{
    "name": "Input_actions",
    "maps": [
        {
            "name": "mouseClicks",
            "id": "49c74d61-09ee-470e-9b89-d3738ff557ed",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "PassThrough",
                    "id": "1674db8c-cb7b-4f51-9e39-2e7683d063c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7e8af359-75f6-429c-a6e6-8d1936c13714",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}